--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: node_js
 node_js:
   - 'node'
+before_deploy: npm install -g now
+deploy:
+  - provider: script
+    script: npx now --token $NOW_TOKEN --public
+    skip_cleanup: true
+    on:
+      all_branches: true
+      condition: $TRAVIS_BRANCH != "master"
