--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 before_deploy: npm install -g now
 deploy:
   - provider: script
-    script: npx now --token $NOW_TOKEN --public
+    script: bash scripts/deploy_review_app.sh
     skip_cleanup: true
     on:
       all_branches: true
