--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - 'node'
+  - "node"
 before_deploy: npm install -g now
 deploy:
   - provider: script
@@ -8,9 +8,15 @@ deploy:
     skip_cleanup: true
     on:
       all_branches: true
+      tags: false
       condition: $TRAVIS_BRANCH != "master"
   - provider: script
     script: bash scripts/deploy_staging_app.sh
     skip_cleanup: true
     on:
       branch: master
+  - provider: script
+    script: bash scripts/deploy_production_app.sh
+    skip_cleanup: true
+    on:
+      tags: true
